--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Go Build and Release
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
 
 permissions:
   contents: write  # Allow writing to GitHub releases
@@ -73,14 +73,13 @@ jobs:
         cd release
         sha256sum * > ${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_checksums.txt
 
-    - name: Create Release
+    - name: Release
       uses: softprops/action-gh-release@v2
-      env:
-        # 使用 GitHub Token 进行身份验证和发布
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: startsWith(github.ref, 'refs/tags/')  # 只在标签推送时运行
       with:
-        files: |
-          release/*
-        generate_release_notes: true  # 自动生成发行说明
-        draft: false  # 不创建草稿
-        prerelease: false  # 不标记为预发布
+        files: release/*
+        generate_release_notes: true
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
